--- a/src/style/Footer.module.scss
+++ b/src/style/Footer.module.scss
@@ -4,8 +4,8 @@ $font: #868e96; // 기본글자색
   display: flex;
   justify-content: center;
   align-items: center;
-  // height: 40px;
   height: 10.26vw;
+  max-height: 43px; // 갤럭시 폴드 대응
   // margin-top: 13px;
   margin-top: 3.33vw;
   border-top: 1px solid #343a40;
