--- a/src/style/MenuBox.module.scss
+++ b/src/style/MenuBox.module.scss
@@ -24,15 +24,14 @@ $gray-00: #f8f9fa; // 기본글자색
   flex-direction: column;
   -webkit-align-items: center; /* 웹킷 */
   align-items: center;
-  // font-size: 40px;
-  font-size: 10.26vw;
+  font-size: clamp(1px, 10.26vw, 43px); // 갤럭시 폴드 대응
   // letter-spacing: 2px;
   letter-spacing: 0.51vw;
   color: $gray-00;
 }
 .menu-box__menu {
-  // margin: 10px 0;
-  margin: 2.56vw 0;
+  margin-top: clamp(1px, 2.56vw, 12px); // 갤럭시 폴드 대응
+  margin-bottom: clamp(1px, 2.56vw, 12px); // 갤럭시 폴드 대응
   text-decoration: none;
   transition: all 50ms ease-in-out;
   -webkit-transition: all 50ms ease-in-out; /* Webkit prefix */
@@ -49,12 +48,11 @@ $gray-00: #f8f9fa; // 기본글자색
 }
 // 활성화된 라우터 표시
 .menu-box__menu-active {
-  // margin: 10px 0;
-  margin: 2.56vw 0;
+  margin-top: clamp(1px, 2.56vw, 12px); // 갤럭시 폴드 대응
+  margin-bottom: clamp(1px, 2.56vw, 12px); // 갤럭시 폴드 대응
   text-decoration: underline;
   text-decoration-style: double;
-  // text-decoration-thickness: 1.5px;
-  text-decoration-thickness: 0.38vw;
+  text-decoration-thickness: clamp(1px, 0.38vw, 1.6px); // 갤럭시 폴드 대응
   transition: all 50ms ease-in-out;
   -webkit-transition: all 50ms ease-in-out; /* Webkit prefix */
   -moz-transition: all 50ms ease-in-out; /* Mozilla prefix */
@@ -69,15 +67,12 @@ $gray-00: #f8f9fa; // 기본글자색
   }
 }
 .menu-box__exit {
-  // font-size: 15px;
-  font-size: 3.85vw;
+  font-size: clamp(1px, 3.85vw, 16px); // 갤럭시 폴드 대응
   font-weight: 900;
   // letter-spacing: 2px;
   letter-spacing: 0.51vw;
-  // margin-top: 50px;
-  margin-top: 12.82vw;
-  // padding: 7px;
-  padding: 1.79vw;
+  margin-top: clamp(1px, 12.82vw, 53px); // 갤럭시 폴드 대응
+  padding: clamp(1px, 1.79vw, 8px); // 갤럭시 폴드 대응
   border: 1px solid $gray-00;
   // -moz-border-radius: 5px;
   // -webkit-border-radius: 5px;
