--- a/src/style/NotificationBox.module.scss
+++ b/src/style/NotificationBox.module.scss
@@ -12,16 +12,18 @@
   align-items: center;
   justify-content: center;
   width: 80%;
+  max-width: 400px; // 갤럭시 폴드 대응
   height: 22vw;
+  max-height: 100px; // 갤럭시 폴드 대응
   background-color: #2e4f4f;
   // border-radius: 25px;
-  border-radius: 6.41vw;
+  border-radius: clamp(1px, 6.41vw, 30px); // 갤럭시 폴드 대응
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
   > div:nth-child(1) {
-    font-size: 6vw;
+    font-size: clamp(1px, 6vw, 30px); // 갤럭시 폴드 대응
   }
   > div:nth-child(2) {
-    font-size: 4vw;
-    margin-top: 1.4vw;
+    font-size: clamp(1px, 4vw, 22px); // 갤럭시 폴드 대응
+    margin-top: clamp(1px, 1.4vw, 7px); // 갤럭시 폴드 대응
   }
 }
