--- a/src/style/Header.module.scss
+++ b/src/style/Header.module.scss
@@ -2,7 +2,7 @@ $gray-09: #212529; // 기본배경색
 
 .header {
   background-color: $gray-09;
-  top: 0px;
+  top: 0;
   display: -webkit-flex; /* Safari */
   display: flex;
   position: -webkit-sticky;
@@ -11,23 +11,26 @@ $gray-09: #212529; // 기본배경색
   justify-content: space-between;
   -webkit-align-items: center; /* Safari */
   align-items: center;
-  height: 17.95vw;
-  max-height: 74px; // 갤럭시 폴드 대응
-  width: 100%;
   z-index: 80;
   opacity: 0.97;
+  margin: 0 1.5vw 3.33vw 1.5vw;
+  height: 18vw;
+  max-height: 80px; // 갤럭시 폴드 대응
+  border-bottom-left-radius: 35px;
+  border-bottom-right-radius: 35px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
 }
 .header__logo {
   // margin-left: 20px;
-  margin-left: 5.13vw;
+  margin-left: 3.5vw;
   height: 11.54vw;
-  max-height: 48px; // 갤럭시 폴드 대응
+  max-height: 52px; // 갤럭시 폴드 대응
 }
 .header__button {
   // margin-right: 20px;
-  margin-right: 5.13vw;
+  margin-right: 3.5vw;
   height: 12.82vw;
-  max-height: 53px; // 갤럭시 폴드 대응
+  max-height: 57px; // 갤럭시 폴드 대응
   transition: all 50ms ease-in-out;
   -webkit-transition: all 50ms ease-in-out; /* Webkit prefix */
   -moz-transition: all 50ms ease-in-out; /* Mozilla prefix */
