--- a/src/style/Meal.module.scss
+++ b/src/style/Meal.module.scss
@@ -32,42 +32,79 @@ $iconBackground: #404258;
     margin-left: clamp(1px, 3.85vw, 27px); // 갤럭시 폴드 대응
     margin-right: clamp(1px, 3.85vw, 16px); // 갤럭시 폴드 대응
   }
-}
-.title__select {
-  position: relative;
-  display: flex;
-  align-items: center;
-  .title__letter {
-    font-size: clamp(1px, 5.38vw, 25px); // 갤럭시 폴드 대응
-  }
-  select {
-    font-size: clamp(1px, 4vw, 15px); // 갤럭시 폴드 대응
-    text-align-last: center; // 중앙정렬
-    -webkit-text-align-last: center; // 아이폰에서도 적용
-    -moz-text-align-last: center;
-    -ms-text-align-last: center;
-    appearance: none;
-    text-decoration: none;
-    border: none;
-    padding: 0;
-    margin: 0;
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    background-color: $gray8;
-    color: $fontColor;
-    top: 0;
-    left: 0;
-    opacity: 0;
-    cursor: pointer;
-  }
-  .title__select-button {
-    width: 2vw;
-    max-width: 10px; // 갤럭시 폴드 대응
-    margin-left: 1.5vw;
+  .title__select {
+    position: relative;
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    cursor: pointer;
+    .title__letter {
+      font-size: clamp(1px, 5.38vw, 25px); // 갤럭시 폴드 대응
+    }
+    select {
+      font-size: clamp(1px, 4vw, 15px); // 갤럭시 폴드 대응
+      text-align-last: center; // 중앙정렬
+      -webkit-text-align-last: center; // 아이폰에서도 적용
+      -moz-text-align-last: center;
+      -ms-text-align-last: center;
+      appearance: none;
+      text-decoration: none;
+      border: none;
+      padding: 0;
+      margin: 0;
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      background-color: $gray8;
+      color: $fontColor;
+      top: 0;
+      left: 0;
+      opacity: 0;
+      cursor: pointer;
+    }
+    .title__select-button {
+      width: 2vw;
+      max-width: 10px; // 갤럭시 폴드 대응
+      margin-left: 1.5vw;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      cursor: pointer;
+    }
+  }
+}
+.meal__body {
+  padding: 0 3.33vw;
+}
+.days {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  /* 가로 스크롤 기능 자동 동작 */
+  overflow-y: scroll;
+  /* 스크롤바 안보이기  */
+  -ms-overflow-style: none; /*익스플로러*/
+  scrollbar-width: none; /*파이어폭스*/
+  &::-webkit-scrollbar {
+    display: none; /* 크롬, 사파리, 오페라, 엣지 */
+  }
+  button + button {
+    margin-left: 10px;
+  }
+  .day {
+    color: #adb5bd;
+    background-color: #343a40;
+    font-size: 15px;
+    padding: 8px;
+    white-space: nowrap;
+    text-align: center;
+    border-radius: 4vw;
+    &:hover {
+      cursor: pointer;
+    }
+  }
+  .selected-day {
+    color: #f8f9fa;
+    background-color: #cf7500;
+    font-size: 18px;
+    padding: 11px;
   }
 }
